Fixed chatbot window being half invisible in mobile responsive mode

--- a/styles/base.css
+++ b/styles/base.css
@@ -496,7 +496,6 @@ a.icon
     flex-direction: row-reverse;
     justify-content: flex-start;
     align-items: flex-end;
-    overflow-x: hidden;
 }
 
 .chatbot-icon
